--- a/app.json
+++ b/app.json
@@ -17,11 +17,11 @@
   "repository": "https://github.com/AgoraLab/DynamicKeyServer-nodejs",
   "env": {
     "APP_ID": {
-      "description": "Agora.io App ID: Login to the Agora.io Developer Dashboard (http://dashboard.agora.io), and navigate to the \"Projects\" tab to get this value",
+      "description": "57e5255efdeb4e1f98d8d683c1d62c30",
       "required": true
     },
     "APP_CERTIFICATE": {
-      "description": "Agora.io App Certificate: Login to the Agora.io Developer Dashboard (http://dashboard.agora.io), and navigate to the \"Projects\" tab to get this value",
+      "description": "f08b05eb71d54ac59be7212c16d03a3d",
       "required": true
     }
   }
